--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -39,6 +39,10 @@
 .dashboard-table table tbody tr td .icon-star-o:hover,
 .dashboard-table table tbody tr td .icon-star-2:hover { transform: scale(1.3); }
 
+.dashboard-table table tbody tr td .icon-open-book { font-size: 23px; margin-left: 35px; display: inline-block; color: #DDD; transition: all .3s ease; }
+.dashboard-table table tbody tr td .icon-open-book.active,
+.dashboard-table table tbody tr td .icon-open-book:hover { transform: scale(1.2); color: #75AECC; }
+
 .dashboard-table table tbody tr.table-loader { height: 60px; }
 .dashboard-table table tbody tr.table-loader::after { display: none; }
 .dashboard-table table tbody tr.table-loader .lds-ellipsis { transform: scale(.7); margin-top: 20px; }
